--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -14,7 +14,7 @@
             id="NameTextField"
             placeholder="Book Name"
             name="title"
-            value="<%= book?.Title %>"
+            value="<%= book.Title %>"
             required
           />
         </div>
@@ -26,7 +26,7 @@
             id="PriceTextField"
             placeholder="Book Price"
             name="price"
-            value="<%= book?.Price %>"
+            value="<%= book.Price %>"
             required
           />
         </div>
@@ -38,7 +38,7 @@
             id="AuthorTextField"
             placeholder="Book Author"
             name="author"
-            value="<%= book?.Author %>"
+            value="<%= book.Author %>"
             required
           />
         </div>
@@ -50,7 +50,7 @@
             id="GenreTextField"
             placeholder="Book Genre"
             name="genre"
-            value="<%= book?.Genre %>"
+            value="<%= book.Genre %>"
             required
           />
         </div>
