--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -6,7 +6,7 @@
     <div class="col-md-offset-1 col-md-10">
       <h3>Favourite Books List</h3>
       <!-- ------------------------ -->
-      <!-- FIX THE ADD BUTTON BELOW -->
+      <!-- ADD BUTTON -->
       <!-- ------------------------ -->
       <a href="books/add" class="btn btn-primary"
         ><i class="fa fa-plus"></i> Add a book</a
